--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1016,3 +1016,80 @@ color: #333333 !important;
   to{ bottom:0; opacity:1 }
 }
 
+
+
+.dmRespColsWrapper {
+    display: flex;
+}
+.u_hcontainer.dmHeader {
+	background-color: rgba(0,76,76,1) !important;
+    box-shadow: rgba(0,0,0,0.25) 0 3px 11px 0 !important;
+    -moz-box-shadow: rgba(0,0,0,0.25) 0 3px 11px 0 !important;
+    -webkit-box-shadow: rgba(0,0,0,0.25) 0 3px 11px 0 !important;
+    background-repeat: no-repeat !important;
+    background-image: url(https://lirp.cdn-website.com/53bec2cf/dms3rep/multi/opt/shutterstock_670189804-1920w.jpg) !important;
+    background-size: cover !important;
+    background-position: 50% 50% !important;
+    position: relative;
+}
+ul.unifiednav__container {
+    flex-wrap: wrap;
+    justify-content: inherit;
+    display: flex;
+    gap: 30px;
+}
+li.unifiednav__item-wrap {
+    list-style: none;
+}
+.u_1095709203 img {
+    width: 100%;
+    padding: 20px;
+}
+.u_1648129144.small-12 {
+    width: 33.33%;
+    position: relative;
+}
+.u_1312091036.dmRespCol.small-12.large-8.medium-8 {
+    width: 66.66667%;
+    display: flex;
+}
+.u_hcontainer.dmHeader:after {
+    content: '';
+    background: rgb(0 76 76 / 88%) !important;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.u_hcontainer.dmHeader > div {
+    z-index: 1;
+    position: relative;
+}
+nav.u_1154921118.effect-bottom2 {
+    float: none !important;
+    top: 0px !important;
+    left: 0 !important;
+    width: calc(100% - 0px) !important;
+    position: relative !important;
+    height: auto !important;
+    padding-left: 15px !important;
+    padding-bottom: 6.8px !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
+    max-width: 100% !important;
+    margin-top: 16px !important;
+    justify-content: center !important;
+    align-items: center !important;
+    margin-bottom: 0px !important;
+    padding-right: 15px !important;
+    min-width: 25px !important;
+    text-align: start !important;
+    display: flex;
+}
+a.unifiednav__item {
+    color: rgba(255,255,255,1) !important;
+    letter-spacing: 0.03em;
+    font-size: 15px;
+}
