--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,9 +7,11 @@ a {
 
 body {
   font-family: Arial, sans-serif;
+  
+}
+.form--area {
   background-color: #f8f8f8;
 }
-
 input:focus, select:focus, textarea:focus {
   outline: none;
 }
